--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 
-
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box  ;
+}
 /* Styles for small screens (e.g., smartphones) */
 @media only screen and (max-width: 600px) {
     /* Your styles for small screens */
