--- a/frontend/src/components/navBar/topNav.module.css
+++ b/frontend/src/components/navBar/topNav.module.css
@@ -26,7 +26,6 @@
     margin: 0 auto;
     align-items: baseline;
     max-width: 1600px;
-    
   }
 
   .navParent > nav.mobile {
@@ -35,9 +34,10 @@
 }
 
 @media screen and (min-width: 1440px) {
-    .navParent > nav.desktop {
-        width: 85%;
-    }}
+  .navParent > nav.desktop {
+    width: 85%;
+  }
+}
 
 .navParent > nav > h2 {
   font-weight: 700;
@@ -83,4 +83,16 @@
 
 .modalBody a {
   font-size: 1.5em;
+}
+
+@media screen and (min-width: 768px) {
+    .modalBody {
+        width: 70vw;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .modalBody, .modalParent {
+        display: none;
+    }
 }
