some new changes

--- a/frontend/src/components/productCard/ProductCard.css
+++ b/frontend/src/components/productCard/ProductCard.css
@@ -30,3 +30,13 @@ button{
     font-size: 28px;
     border-radius: 5px;
 }
+
+#theProduct{
+    color: black;
+}
+#theProduct1{
+    color: black;
+}
+#theProduct2{
+    color: black;
+}
