--- a/frontend/src/components/womenComp/Women.css
+++ b/frontend/src/components/womenComp/Women.css
@@ -7,8 +7,8 @@
 .ladiesCard{
     padding: 38px 0;
     padding-left: 17px;
-    background-color: black;
-    color:  #F0DA98;
+    background-color: white;
+    color: black;
     /* display: flex; */
 }
 
