--- a/frontend/src/components/menComp/Men.css
+++ b/frontend/src/components/menComp/Men.css
@@ -14,10 +14,14 @@
 .cardMen{
     padding: 45px 0;
     padding-left: 30px;
-    background-color: black;
-    color:  #F0DA98;
+    /* background-color: black; */
+    color: black;
 }
 
 button{
     font-size: 15px;
+}
+
+#theShip{
+    color: black;
 }
