--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,4 @@
 
-/* *{
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box  ;
-} */
-/* Styles for small screens (e.g., smartphones) */
-@media only screen and (max-width: 600px) {
-    /* Your styles for small screens */
-  }
-  
-  /* Styles for medium screens (e.g., tablets) */
-  @media only screen and (min-width: 601px) and (max-width: 1024px) {
-    /* Your styles for medium screens */
-  }
-  
-  /* Styles for large screens (e.g., desktops) */
-  @media only screen and (min-width: 1025px) {
-    /* Your styles for large screens */
-  }
   
 .warning{
   height: 40px;
@@ -27,7 +8,7 @@
   top: 10px;
   background-color: #F0DA98;
   font-size: 1.1rem;
-  color: white;
+  /* color: white; */
   font-family: cursive;
   padding: 5px;
   border-radius: 5px;
