--- a/frontend/src/components/accessories/Accessories.css
+++ b/frontend/src/components/accessories/Accessories.css
@@ -7,8 +7,8 @@
 .accessoriesCard{
     padding: 38px 0;
     padding-left: 17px;
-    background-color: black;
-    color:  #F0DA98;
+    /* background-color: black; */
+    /* color:  #F0DA98; */
     /* display: flex; */
 }
 
@@ -16,4 +16,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
+}
+.myAccessories{
+    color: black;
 }
