--- a/frontend/src/components/collections/Collection.css
+++ b/frontend/src/components/collections/Collection.css
@@ -7,7 +7,7 @@
 .collectionCard{
     padding: 38px 0;
     padding-left: 17px;
-    background-color: black;
+    /* background-color: black; */
     color:  #F0DA98;
     /* display: flex; */
 }
@@ -16,4 +16,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
+}
+.theCollection{
+    color: black;
 }
