--- a/frontend/src/page/Search.css
+++ b/frontend/src/page/Search.css
@@ -1,8 +1,9 @@
 .searchCard{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    color: #f0da98;
-    /* padding: 38px 0; */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: black;
+    padding: 38px 0;
+    padding-left: 10px;
 }
 
 img{
@@ -19,4 +20,40 @@ p{
 
 #priceColor{
     color: #f0da98;
+}
+
+.theForms{
+    display: flex;
+    margin: 10px;
+}
+
+#theEmail{
+    margin-left: 10px;
+    margin-right: 15px;
+}
+
+.CheckoutPage{
+    padding: 16px 0 10px 10px;
+}
+
+#shop{
+    color: gray;
+    padding-left: 10px;
+    margin-top: 10px;
+}
+
+.theProceed{
+    display: flex;
+    flex-direction: row;
+    /* grid-template-columns: auto; */
+}
+
+.theFormGroup{
+    border: 1px solid black;
+}
+#theGridbox{
+   padding-left: 10px;
+}
+#theGridbox1{
+   padding-left: 23px;
 }
